--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint src --max-warnings=0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
