--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "fuse.js": "^6.6.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-redux": "^8.0.2"
+    "react-redux": "^8.0.2",
+    "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.18.2",
@@ -37,6 +38,7 @@
     "eslint-plugin-tailwindcss": "^3.5.2",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
+    "msw": "^0.42.1",
     "postcss": "^8.4.14",
     "prettier": "2.6.2",
     "tailwindcss": "^3.1.2",
